--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <br><br>
         <button onclick="window.location.href='./salat.html'">Heure de prière</button>
         <button onclick="window.location.href='./coran.html'">Lire le coran</button>
-        <button onclick="window.location.href='./rappelle.html'">Rappelle (tiktok)</button>
+        <button onclick="window.location.href='./qibla.html'">Qibla Direction</button>
         <br>
         <h3>By <a target="_blank" href="https://github.com/zougataga">zougataga</a></h3>
     </section>
