--- a/salat.html
+++ b/salat.html
@@ -37,7 +37,7 @@
     <div class="zone_titre">
         <span class="ar"></span><br>
         <h1>Chargement...</h1>
-        <p>Si sa ne charge pas merci d'attendre queqlque seconde et de relancer la page !</p>
+        <p>Prochaine pirère (????): ??:??</p>
     </div>
     <section class="salat">
         <div class="input">
