--- a/coran.html
+++ b/coran.html
@@ -49,6 +49,10 @@
             </svg>
         </div>
     </div>
+    <div>
+        <button id="random">Random Surah</button>
+        <button id="autoplay" class="novalid">AutoPlay</button>
+    </div>
     <div class="zone_titre">
         <span class="ar">الفاتحة</span><br>
         <h1>Sourate AL-FATIHA / الفاتحة en arabe | Sourate 1</h1>
