--- a/salat.html
+++ b/salat.html
@@ -42,7 +42,7 @@
     <section class="salat">
         <div class="input">
             <input type="text" placeholder="Entrer votre position. (vile, ex: Paris)">
-            <button disabled="" type="button">GO</button>
+            <button disabled="" type="button">Rechercher</button>
         </div>
     </section>
 
